--- a/MySQL/mysql-slave/docker-compose.yml
+++ b/MySQL/mysql-slave/docker-compose.yml
@@ -1,6 +1,5 @@
 # 主从数据库
 version: '3'
-
 services:
   adminer:
     image: adminer
@@ -9,6 +8,8 @@ services:
       - 8080:8080
     links:
       - master:db
+    networks:
+      - app
 
   master:
     image: mysql:5.7
@@ -20,6 +21,10 @@ services:
       - ./config/master/conf:/etc/mysql/conf.d
       - ./config/master/logs:/var/log/mysql
       - ./config/master/data:/var/lib/mysql
+    networks:
+      app:
+        aliases:
+          - mysql-master
 
   slave1:
     image: mysql:5.7
@@ -31,6 +36,10 @@ services:
       - ./config/slave1/conf:/etc/mysql/conf.d
       - ./config/slave1/logs:/var/log/mysql
       - ./config/slave1/data:/var/lib/mysql
+    networks:
+      app:
+        aliases:
+          - mysql-slave1
 
   slave2:
     image: mysql:5.7
@@ -42,3 +51,12 @@ services:
       - ./config/slave2/conf:/etc/mysql/conf.d
       - ./config/slave2/logs:/var/log/mysql
       - ./config/slave2/data:/var/lib/mysql
+    networks:
+      app:
+        aliases:
+          - mysql-slave2
+
+# 公用网络
+networks:
+  app:
+    external: true
