--- a/Nginx/docker/keepalived/keepalived.conf
+++ b/Nginx/docker/keepalived/keepalived.conf
@@ -1,9 +1,9 @@
 ! Configuration File for keepalived
 
 global_defs {
-   router_id NKEEP_BACKUP       #唯一标识，不能重复
+   router_id NKEEP_MASTER       #唯一标识，不能重复
    vrrp_skip_check_adv_addr
-   #vrrp_strict
+   # vrrp_strict
    vrrp_garp_interval 1
    vrrp_gna_interval 1
 }
@@ -14,7 +14,7 @@ vrrp_script chk_nginx {
 }
 
 vrrp_instance VI_1 {
-    state BACKUP
+    state MASTER
     interface eth0  #所属网络
     virtual_router_id 51
     priority 100  #权重
@@ -24,7 +24,7 @@ vrrp_instance VI_1 {
         auth_pass 1111
     }
     virtual_ipaddress {
-        172.100.0.100 #vip虚拟地址
+        172.17.0.100 #vip虚拟地址
     }
     track_script {
        chk_nginx #调用执行脚本的函数，上面已经定义该函数
