--- a/Nginx/haproxy/haproxy.cfg
+++ b/Nginx/haproxy/haproxy.cfg
@@ -1,24 +1,24 @@
 global
-	log 127.0.0.1 local0
-	maxconn 4096
-	daemon
-	nbproc 4
-	
+    log 127.0.0.1 local0
+    maxconn 4096
+    daemon
+    # nbproc 4 将废弃，使用多线程模式
+
 defaults
-	log 127.0.0.1 local3
-	mode http
-	option dontlognull
-	option redispatch
-	retries 2
-	maxconn 2000
-	balance roundrobin
-	timeout connect 5000ms
-	timeout client 5000ms
-	timeout server 5000ms
-	
+    log 127.0.0.1 local3
+    mode http
+    option dontlognull
+    option redispatch
+    retries 2
+    maxconn 2000
+    balance roundrobin
+    timeout connect 5000ms
+    timeout client 5000ms
+    timeout server 5000ms
+
 frontend main
-	bind *:6301
-	default_backend webserver
-	
-backend webserveer
-	server nginx_master 127.200.127.50:80 check inter 2000 rise 2 fall 5
+    bind *:6301
+    default_backend webserver
+
+backend webserver
+    server ngxin_master 172.100.0.100:80 check inter 2000 rise 2 fall 5
