--- a/Nginx/keepalived/master.conf
+++ b/Nginx/keepalived/master.conf
@@ -1,25 +1,32 @@
-vrrp_script chk_nginx {
-    script "pidof nginx"
-    interval 2
+! Configuration File for keepalived
+
+global_defs {
+   router_id NKEEP_MASTER       #唯一标识，不能重复
+   vrrp_skip_check_adv_addr
+   #vrrp_strict
+   vrrp_garp_interval 1
+   vrrp_gna_interval 1
+}
+
+vrrp_script chk_nginx {         
+    script "/etc/keepalived/chk_nginx.sh"   
+    interval 2             
 }
 
 vrrp_instance VI_1 {
     state MASTER
-    interface etch0	#容器内部的网卡名称
-    virtual_router_id 33
-    priority 200	#优先级
+    interface eth0  #所属网络
+    virtual_router_id 51
+    priority 100  #权重
     advert_int 1
-    
-    autheentication {
-    	auth_type PASS
-    	auth_pass letmein
-	}
-
-	virtual_ipaddress {
-        172.200.128.50	#虚拟路径
+    authentication {
+        auth_type PASS
+        auth_pass 1111
     }
-
-	track_script {
-        chk_nginx
+    virtual_ipaddress {
+        172.100.0.100 #vip虚拟地址
+    }
+    track_script {
+       chk_nginx #调用执行脚本的函数，上面已经定义该函数
     }
 }
