--- a/Swoole/docker-compose.yml
+++ b/Swoole/docker-compose.yml
@@ -1,46 +1,10 @@
 version: '3'
 services:
   swoole:
-    image: "twosee/swoole-coroutine"
-    ports:
-      - "9501:9501"
-    volumes:
-      - ./src:/app/src:rw
-    restart: always
-    depends_on:
-      - mysql
-    command: php /app/src/server.php start
-
-  mysql:
-    image: "twosee/swoole-coroutine:mysql"
-    ports:
-      - "9502:3306"
-    volumes:
-      - ./data/mysql/data:/var/lib/mysql:rw
-      - ./data/mysql/sock:/var/run/mysqld:rw # remove when windows.
-    restart: always
+    image: phpswoole/swoole
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: test
-      MYSQL_USER: php
-      MYSQL_PASSWORD: 123456
-
-  redis:
-    image: "twosee/swoole-coroutine:redis"
+      DISABLE_DEFAULT_SERVER: 1
     ports:
-      - "9503:6379"
+      - "9000:9501"
     volumes:
-      - ./data/redis/data:/var/lib/redis:rw
-    sysctls:
-        net.core.somaxconn: 65535
-    restart: always
-
-  # inotify:
-  #   image: "twosee/swoole-coroutine:inotify"
-  #   volumes:
-  #     - ./:/app:rw
-  #   restart: always
-  #   environment:
-  #     APP_ENV: dev # or product
-  #   working_dir: /app/util
-  #   command: /bin/bash inotify.sh
+      - ./src:/var/www
