--- a/Swoole/docker-compose.yml
+++ b/Swoole/docker-compose.yml
@@ -20,3 +20,10 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 123456
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+    links:
+      - mysql:db
